[project]
name = "bios0032utils"
version = "0.1.1"
description = "Utilities for BIOS0032 AI4Environment colab notebooks"
authors = [
  { name = "Santiago Martinez", email = "santiago.balvanera.20@ucl.ac.uk" },
  { name = "Omiros Pantazis", email = "omiros.pantazis.16@ucl.ac.uk" },
  { name = "Kate Jones", email = "kate.e.jones@ucl.ac.uk" },
]
dependencies = [
  "librosa",
  "matplotlib",
  "plotly",
  "ipython",
  "pydub",
  "ipywebrtc",
  "xarray",
  "wavio>=0.0.7",
  "torch>=1.10",
  "seaborn>=0.13.1",
]
requires-python = ">=3.8"
license = { text = "MIT" }

[build-system]
requires = ["uv_build >= 0.9.26, <0.10.0"]
build-backend = "uv_build"

[project.urls]
"Homepage" = "https://github.com/MScEcologyAndDataScienceUCL/bios0032_utils"
"Bug Tracker" = "https://github.com/MScEcologyAndDataScienceUCL/bios0032_utils/issues"

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
